se hacen cambios

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -50,3 +50,21 @@
     </div>
   </div>
 </section>
+
+
+<section class="Intro">
+  <div class="container">
+    <div class="row text-left">
+      <div class="col-xs-12 col-md-8">
+        <div class="Intro-container">
+          <div class="Intro-title">
+            <p>Bienvenido a</p>
+            <p>Parqueadero online </p>
+            <p>guardo tu bici aqui !</p>
+          </div>
+          <a href="" class="Intro-button btn btn-primary">Comienza Ya</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
