--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,7 @@
       <script src="bower_components/angular-animate/angular-animate.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
